create github pages

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -138,7 +138,7 @@ body {
   background-color: #82786e !important;
 }
 .bg-warning {
-  background-color: #879a9f !important;
+  background-color: #41a559 !important;
 }
 .bg-danger {
   background-color: #b1a374 !important;
@@ -225,8 +225,8 @@ body {
 }
 .btn-warning,
 .btn-warning:active {
-  background-color: #879a9f !important;
-  border-color: #879a9f !important;
+  background-color: #41a559 !important;
+  border-color: #41a559 !important;
   color: #ffffff !important;
 }
 .btn-warning:hover,
@@ -234,14 +234,14 @@ body {
 .btn-warning.focus,
 .btn-warning.active {
   color: #ffffff !important;
-  background-color: #617479 !important;
-  border-color: #617479 !important;
+  background-color: #2b6e3b !important;
+  border-color: #2b6e3b !important;
 }
 .btn-warning.disabled,
 .btn-warning:disabled {
   color: #ffffff !important;
-  background-color: #617479 !important;
-  border-color: #617479 !important;
+  background-color: #2b6e3b !important;
+  border-color: #2b6e3b !important;
 }
 .btn-danger,
 .btn-danger:active {
@@ -389,22 +389,22 @@ body {
 .btn-warning-outline,
 .btn-warning-outline:active {
   background: none;
-  border-color: #55666b;
-  color: #55666b;
+  border-color: #245c32;
+  color: #245c32;
 }
 .btn-warning-outline:hover,
 .btn-warning-outline:focus,
 .btn-warning-outline.focus,
 .btn-warning-outline.active {
   color: #ffffff;
-  background-color: #879a9f;
-  border-color: #879a9f;
+  background-color: #41a559;
+  border-color: #41a559;
 }
 .btn-warning-outline.disabled,
 .btn-warning-outline:disabled {
   color: #ffffff !important;
-  background-color: #879a9f !important;
-  border-color: #879a9f !important;
+  background-color: #41a559 !important;
+  border-color: #41a559 !important;
 }
 .btn-danger-outline,
 .btn-danger-outline:active {
@@ -473,7 +473,7 @@ body {
   color: #82786e !important;
 }
 .text-warning {
-  color: #879a9f !important;
+  color: #41a559 !important;
 }
 .text-danger {
   color: #b1a374 !important;
@@ -502,7 +502,7 @@ a.text-info:focus {
 }
 a.text-warning:hover,
 a.text-warning:focus {
-  color: #55666b !important;
+  color: #245c32 !important;
 }
 a.text-danger:hover,
 a.text-danger:focus {
@@ -523,7 +523,7 @@ a.text-black:focus {
   background-color: #82786e;
 }
 .alert-warning {
-  background-color: #879a9f;
+  background-color: #41a559;
 }
 .alert-danger {
   background-color: #b1a374;
@@ -578,7 +578,7 @@ a:hover {
 }
 .mbr-plan-header.bg-warning .mbr-plan-subtitle,
 .mbr-plan-header.bg-warning .mbr-plan-price-desc {
-  color: #ced6d8;
+  color: #92d4a2;
 }
 .mbr-plan-header.bg-danger .mbr-plan-subtitle,
 .mbr-plan-header.bg-danger .mbr-plan-price-desc {
@@ -1411,11 +1411,11 @@ body {
   box-shadow: none !important;
 }
 .cid-rtZhY88gd7 {
-  background-image: url("../../../assets/images/untitled-2-2000x1333.png");
+  background-image: url("../../../assets/images/2575413-1-2000x1201.png");
 }
 .cid-rtZhY88gd7 .mbr-text,
 .cid-rtZhY88gd7 .mbr-section-btn {
-  color: #232323;
+  color: #ffffff;
 }
 .cid-rtZhY88gd7 H1 {
   color: #232323;
@@ -1474,7 +1474,7 @@ body {
   color: #ffffff;
 }
 .cid-rtN28F93nE .countdown-cont {
-  background: linear-gradient(45deg, #cc2952, #e4d295);
+  background: linear-gradient(45deg, #313445, #09090c);
   max-width: 700px;
   border-radius: 3px;
   margin: 0 auto;
@@ -1763,11 +1763,11 @@ body {
 }
 .cid-rtN4j3sZp2 P {
   text-align: center;
-  color: #232323;
+  color: #ffffff;
 }
 .cid-rtN4j3sZp2 H2 {
   text-align: center;
-  color: #232323;
+  color: #ffffff;
 }
 .cid-runWVSzDDn {
   padding-top: 60px;
